--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon -r dotenv/config src/index.js",
+    "build": "npm install",
     "start": "node -r dotenv/config src/index.js"
   },
   "keywords": [],
